# signdocs-brasil-python

./: .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
signdocs_brasil/: __init__.py  _auth.py  _config.py  _http_client.py  _retry.py  client.py  errors.py  response_metadata.py  token_cache.py  webhook_verifier.py
signdocs_brasil/models/: __init__.py  document.py  document_group.py  envelope.py  evidence.py  health.py  signing.py  signing_session.py  step.py  transaction.py  user.py  webhook.py
signdocs_brasil/resources/: __init__.py  document_groups.py  documents.py  envelopes.py  evidence.py  health.py  signing.py  signing_sessions.py  steps.py  transactions.py  users.py  verification.py  webhooks.py
tests/: test_auth.py  test_client.py  test_config.py  test_custom_session.py  test_error_paths.py  test_errors.py  test_http_client.py  test_integration.py  test_logger.py  test_models.py  test_pagination_edge.py  test_per_request_timeout.py  test_resources.py  test_response_metadata.py  test_retry.py  test_retry_integration.py  test_token_cache.py  test_webhook_event_types.py  test_webhook_verifier.py
